fix media query spacing, start author page

--- a/css/media.css
+++ b/css/media.css
@@ -5,6 +5,7 @@
 	}
 	.mainTitle, .mainContent {
 		width: 40%;
+		margin-top: 10%;
 	}
 	.box2 {
 		display: none;
@@ -31,7 +32,6 @@
 	.mainContent {
 		width: 75%;
 	}
-	/*There is an issue with the spacing. Image is too low, need text to move into space above image*/
 	.bannerBox {
 		font-size: .5em;
 		width: 100%;
