--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -33,7 +33,7 @@ img {
 	height: 100%;
 	/*float: left;*/
 }
-.main,aside {
+aside {
 	height: 720px;
 	border-top: 2px solid #FFFFFF;
 }
@@ -58,9 +58,10 @@ aside {
 	width: 85%;
 }
 .main {
-	/*border-top: 2px solid #FFFFFF;*/
+	border-top: 2px solid #FFFFFF;
 	align-items: center;
   	justify-content: center;
+  	height: 100%;
 }
 .main h2 {
 	color: #ffffff;
@@ -122,7 +123,6 @@ nav {
 .mainContent {
 	order:2;
 	width: 35%;
-	/*height: 50%;*/
 	/*background-color: yellow;*/
 
 }
@@ -161,11 +161,14 @@ nav {
 	font-weight: bold;
 	font-size: 1.2em;
 }
-/*.ui-accordion-header { background-color: blue; }*/
-/*.ui-accordion-content {
-	width: 100%;
-    background-color: black;
-    color: #777;
-    font-size: 10pt;
-    line-height: 16pt;
-}*/
+.hero {
+	width: 50%;
+	height: auto;
+	margin-top: 10%;
+
+}
+.heroTitle {
+	width: 60%;
+	height: 50px;
+	background-color: red;
+}
